--- a/src/components/forgottenpassword/forgottenpassword.css
+++ b/src/components/forgottenpassword/forgottenpassword.css
@@ -2,17 +2,17 @@
 .forgot-password-container, .reset-password-container {
   background-color: white;
   padding: 20px;
-  margin-left: 20rem;
-  margin-top: 2rem;
+  margin: 10rem 0px;
   width: 600px;
 }
 
 /* Header styling */
 h2 {
-  margin-top: 5px;
+  margin-top: 1rem;
   margin-bottom: 20px;
   text-align: center;
   color: #e45122; /* Green color */
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* Form elements */
@@ -23,18 +23,21 @@ form {
 
 label {
   margin-bottom: 5px;
-  font-weight: bold;
   color: #e45122;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 2rem 0px;
+  font-weight: lighter;
 }
 
-input[type="email"], input[type="password"] {
+input[type="text"], input[type="password"] {
   padding: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 16px;
   width: 100%;
   box-sizing: border-box;
+  outline: none;
+  border: 1px solid gainsboro !important;
+  margin: 1rem 0px;
 }
 
 /* Button styling */
@@ -47,6 +50,7 @@ button {
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s;
+  margin-top: 1rem;
 }
 
 button:hover {
@@ -60,4 +64,22 @@ p {
   color: #d32f2f; /* Red color for errors */
   font-size: 15px;
   margin-top: 10px;
+}
+.error-message{
+  background-color: #FFEEEE;
+  padding: 1rem 0px;
+  border: 1px solid #ED0F0F;
+  border-radius: 8px;
+  width: 60%;
+  margin: 0px auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.error-message p{
+  color: #ED0F0F;
+}
+.success-message p{
+  color: #4caf50;
 }
