--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -10,32 +10,92 @@
 }
 
 .home {
+  /* https://res.cloudinary.com/degnky4ab/image/upload/v1720909746/sr0c3zfkj0kns0w6wrnx.png */
+  position: relative;
   margin-top: -2rem;
-  height: 104vh;
-  background-image: url(https://res.cloudinary.com/degnky4ab/image/upload/v1720909746/sr0c3zfkj0kns0w6wrnx.png);
+  background-image: url(https://res.cloudinary.com/dbliiehh9/image/upload/v1723301864/images/qxrjciwqcvxjdsez7qhe.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 .home1 {
-  font-size: smaller;
+  width: 10vw;
+  margin-left: 2rem;
+  margin-top: 1rem;
+}
+.propwise-text{
+  background-color: white;
+  width: 20%;
+  margin-top: -1rem;
+}
+.propwise-text p{
+  margin-left: 3rem;
+  font-size: 1.3rem;
+}
+
+.inner-content{
+  width: 70%;
+  min-height: 10%;
+}
+.text-one{
+  font-size: 7rem;
+  text-align: left;
+  color: black;
+  margin-left: 2rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin-top: 4rem;
+}
+.text-two{
+  text-align: left;
+  margin-left: 2rem;
   margin-top: 2rem;
-  width: 60vw;
-  margin-left: -33rem;
+  color: rgb(88, 88, 88);
+  line-height: 26px;
+  font-family: cursive;
+  width: 90%;
+}
+.btn-flex{
+  width: 90%;
+  margin-left: 2rem;
+  margin-top: 2.5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 3rem;
+}
+.read-more, .get-started{
+  width: 100%;
+  padding: 1rem .5rem;
+  text-align: center;
+}
+.read-more{
+  text-decoration: none;
+  background-color: #E45122;
+  border-radius: 10px;
+  color: white;
+}
+.get-started{
+  text-decoration: none;
+  border-radius: 10px;
+  border: 1px solid #E45122;
+  color: #E45122;
 }
 .home2 {
-  font-size: smaller;
-  margin-left: -28rem;
-  margin-top: -2.8rem;
+  margin-top: 1rem;
+  width: 5vw;
+  margin-left: 1rem;
 }
 .home3 {
-  margin-left: -38rem;
+  margin-left: 38rem;
+  width: 10vw;
 }
 .home4 {
-  font-size: smaller;
-  margin-left: -27.5rem;
+  margin-left: 27.5rem;
+  width: 10vw;
 }
 .btn7 button {
+  position: absolute;
+  bottom: 0;
   padding: 15px 25px;
   border-radius: 5px;
   background-color: #e45122;
@@ -56,34 +116,101 @@
 }
 .about-home p{
   color: black;
-  font-family: Roboto;
-font-size: 20px;
-font-weight: 300;
-line-height: 30px;
-text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  line-height: 22px;
 }
 .about-home{
   margin-bottom: 5rem;
 }
 .about-home h2{
-  height: 45px;
-  gap: 0px;
-  opacity: 0px;
-  color: black;
-padding: 2rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin-top: 1rem;
+  color: rgb(88, 88, 88);
+  font-size: 3rem;
+}
+.heading-home{
+  background-color: white;
+  padding: 3rem 1rem;
 }
 .heading-home h2{
-  height: 45px;
-  gap: 0px;
-  opacity: 0px;
-  color: black;
-padding: 2rem;
+  font-size: 4rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: lighter;
+  color: rgb(88, 88, 88);
 }
 .heading-home p{
   color: black;
-  font-family: Roboto;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-size: 20px;
 font-weight: 300;
 line-height: 30px;
 text-align: center;
+}
+.overlay{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+/* hero page */
+
+.heropage{
+  width: 100%;
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.content{
+  background-color: white;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 16px;
+}
+.about-container{
+  width: 100%;
+  padding: 3rem 1rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.about-text p{
+  color: rgb(88, 88, 88);
+  text-align: left;
+  line-height: 28px;
+}
+.about-text{
+  width: 70%;
+  padding: .2rem;
+}
+.about-text h1{
+  margin-bottom: 2rem;
+  color: rgb(88, 88, 88);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.wrapper-1{
+  margin-left: 8rem;
+}
+.walk-image-1{
+  background-image: url('../../../public/Macbook.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 20rem;
+}
+.walk-image-2{
+  background-image: url('../../../public/IconImage.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 30rem;
+}
+.stroke{
+  width: 20%;
+  min-height: 1rem;
+  background-color: #E45122;
+  margin: 0 auto;
 }
