--- a/src/components/mainhome/mainhome.css
+++ b/src/components/mainhome/mainhome.css
@@ -1,16 +1,30 @@
 .onboard {
-  height: 83vh;
+  position: relative;
+  height: 100vh;
   background-image: url(https://res.cloudinary.com/degnky4ab/image/upload/v1721046794/chnbljbcwb6wpu2yyuyn.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   margin-top: 0;
 }
+.overlay{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .4);
+}
+.inner-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
 .text {
   text-align: center;
   padding-top: 7rem;
   color: #ffffff;
-  font-family: Roboto;
+  font-family: sans-serif;
   font-size: 30px;
   font-weight: 700;
   text-align: center;
@@ -23,6 +37,11 @@
   font-weight: 400;
   line-height: 40px;
   text-align: center;
+}
+.para p{
+  color: white;
+  font-family: sans-serif;
+  word-spacing: 3px;
 }
 .onboard2 {
   background-image: url(https://res.cloudinary.com/degnky4ab/image/upload/v1721212315/eqrbdzqedtgf81lw3lyy.png);
@@ -79,11 +98,17 @@
   font-size: large;
   font-weight: bold;
   margin-top: 2rem;
-  margin-left: 38rem;
+}
+.btn55 a{
+  text-decoration: none;
+  color: white;
+}
+.btn55 a:hover {
+  color: #e45122;
 }
 .start55:hover {
   transform: scale(1.05);
   border-color: #ffffff;
   background-color: #ffffff;
-  color: #e45122;
+  color: #e45122 !important;
 }
