--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,6 +1,6 @@
 #Nav {
   background-color: white;
-  font-size: 2vw;
+  font-size: 1rem;
   padding: 0.5rem 1rem;
   ul {
     display: flex;
@@ -12,7 +12,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      font-weight: bold;
+      font-weight: lighter;
       padding: 0.5rem 2rem;
       color: #e45122;
       a {
