--- a/src/components/payment/payment.css
+++ b/src/components/payment/payment.css
@@ -1,41 +1,70 @@
-.payment-page {
-    display: flex;
-    padding: 20px;
-  }
-  
-  .go-back {
-    margin-bottom: 10px;
-  }
-  
-  .payment-summary {
-    flex: 1;
-    padding: 20px;
-    border-right: 1px solid #ccc;
-  }
-  
-  .payment-details {
-    flex: 1;
-    padding: 20px;
-  }
-  
-  .payment-details h1 {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .payment-details input {
-    display: block;
-    margin: 10px 0;
-    padding: 10px;
-    width: 100%;
-  }
-  
-  .payment-details .error {
-    color: red;
-    margin-top: 5px;
-  }
-  
-  .transaction-steps span {
-    display: block;
-    margin-top: 10px;
-  }
+body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: whitesmoke;
+  width: 100%;
+}
+.payment-section{
+  background-color: white;
+  width: 800px;
+  padding: 2rem;
+  height: 400px;
+  margin-top: 7rem;
+}
+.payment-section a{
+  width: fit-content;
+  padding: .8rem;
+  border: 1px solid #E45122;
+  text-decoration: none;
+  color: #E45122;
+  border-radius: 6px;
+}
+.payment-wrapper{
+  width: 100%;
+  min-height: 20px;
+  margin-top: 4rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+}
+.amount{
+  padding: 10px;
+}
+.amount p{
+  text-align: left;
+  color: black;
+  line-height: normal;
+  font-family: 'Times New Roman', Times, serif;
+}
+.amount .amt span{
+  color: black;
+  font-size: 2rem;
+  margin-left: 10px;
+}
+.amount .para-2 {
+  line-height: 22px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: lighter;
+}
+.prop{
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, .2);
+  padding: 1rem;
+  margin-top: -5rem;
+  width: 25%;
+}
+.prop p{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: lighter;
+  color: black;
+  text-align: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.prop button{
+  display: block;
+  margin: 1rem auto;
+}
