--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -10,9 +10,13 @@
 /* Container for the signup page */
 .signup-container {
   display: flex;
+  align-items: center;
+  justify-content: center;
   min-height: 100vh;
   background-color: whitesmoke;
   color: gray;
+  padding: 2rem;
+  width: 1200px;
 }
 
 /* Styling for the form and image sections */
@@ -24,7 +28,7 @@
 /* Form styling */
 .signup-form {
   padding: 20px;
-  max-width: 400px;
+  width: 90%;
   margin: auto; /* Center the form horizontally */
   display: flex;
   flex-direction: column;
@@ -46,12 +50,12 @@
 
 .signup-header h1 {
   color: #e45122;
-  margin-bottom: 5px; /* Increase bottom margin */
+  margin: 5px; /* Increase bottom margin */
 }
 
 .signup-header p {
-  font-size: 16px;
-  color: black;
+  font-size: 1rem;
+  color: rgb(105, 105, 105);
 }
 
 /* Form fields and layout */
@@ -63,6 +67,7 @@
 
 .form-row {
   display: flex;
+  flex-direction: column;
   gap: 10px; /* Space between first name and last name fields */
 }
 
@@ -71,9 +76,11 @@
 }
 
 .form-field label {
-  font-size: 14px;
+  font-size: 1rem;
   color: #e45122;
-  margin-bottom: 5px;
+  font-family: sans-serif;
+  font-weight: lighter;
+  margin: 10px 0;
   display: block;
 }
 
@@ -81,11 +88,12 @@
 
 .form-field input,
 .form-field select {
-  width: 90%;
-  padding: 5px;
-  border: 1px solid var(--primary-color);
-  border-radius: 5px;
-  font-size: 16px;
+  width: 100%;
+  padding: 10px;
+  outline: none;
+  border: none;
+  border: 1px solid rgb(185, 184, 184);
+  border-radius: 6px;
 }
 
 .form-field input:focus,
@@ -106,6 +114,10 @@
   font-size: 18px;
   transition: background-color 0.3s;
 }
+.btn-primary:hover{
+  background-color: white !important;
+  border: 1px solid #e45122 !important;
+}
 
 /* Signup prompt styling */
 .signup-prompt {
@@ -121,4 +133,53 @@
 
 .signup-prompt a:hover {
   text-decoration: underline;
+}
+.signup-wrapper{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  background-color: white;
+  width: 90%;
+  min-height: 120px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.1);
+}
+.sign-up-image{
+  position: relative;
+  background-image: url('../../../public/reg-page-image.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.sign-up-overlay{
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.success-wrapper{
+  width: 600px;
+  height: 400px;
+  background-color: white;
+  margin-top: 4rem;
+}
+.success-wrapper img {
+  display: block;
+  margin: 0px auto;
+}
+.success-wrapper h2{
+  color: #4caf50 !important;
+}
+.success-wrapper p{
+  color: #4caf50;
+}
+.error-container{
+  background-color: rgb(234, 50, 50);
+  width: 70%;
+  margin: 0px auto;
+  padding: 1rem;
+  border-radius: 6px;
+}
+.error-container p{
+  color: white;
 }
